# aoc2023

src/day1/: main.cpp
src/day2/: CMakeLists.txt
src/day2/src/: CMakeLists.txt  FileReader.cpp  FileReader.h  GameRecord.cpp  GameRecord.h  GameRecordParser.cpp  GameRecordParser.h  GameValidator.cpp  GameValidator.h  MinimumCubesCalculator.cpp  MinimumCubesCalculator.h  main.cpp  main_include.h  main_test.cpp
src/skeleton/: CMakeLists.txt
src/skeleton/src/: CMakeLists.txt  main.cpp  main_include.h
src/skeleton/src/test/: main_test.cpp
